feat: add client and refactor server